# wolf3d

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
scripts/: patch_shader_manager.py
shaders/: basic.glsl
shaders/fragments/: blue.glsl  orange.glsl  yellow.glsl
src/: main.cpp
src/shader_manager/: shader_manager.hpp_to_patch  shader_manager.topatch
src/shader_manager/src/: shader_manager.cpp
